Fix 1px desktop/mobile size gap

--- a/app/assets/stylesheets/avalon.css.scss
+++ b/app/assets/stylesheets/avalon.css.scss
@@ -22,7 +22,7 @@
  * Snippets to extend
  */ 
 .mobile-hidden {
- @media (max-width: $screen-sm-min) {
+ @media (max-width: $screen-xs-max) {
     display: none !important;
   }
 }
